--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="btn_add">Add</string>
     <string name="save">Save</string>
     <string name="update">Update</string>
+    <string name="update_post">Update Post</string>
 </resources>
