--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="save">Save</string>
     <string name="update">Update</string>
     <string name="update_post">Update Post</string>
+    <string name="addEvent">Add</string>
 </resources>
